--- a/windows10.yml
+++ b/windows10.yml
@@ -3,13 +3,12 @@ services:
     image: dockurr/windows
     container_name: windows
     environment:
-      VERSION: "10"
-      USERNAME: "PUSHPRAJXP"
+      VERSION: "7e"
+      USERNAME: "Administrator"
       PASSWORD: "admin@123"
       RAM_SIZE: "4G"
-      CPU_CORES: "4"
-      DISK_SIZE: "400G"
-      DISK2_SIZE: "100G"
+      CPU_CORES: "3"
+      DISK_SIZE: "14G"
     devices:
       - /dev/kvm
       - /dev/net/tun
@@ -20,3 +19,4 @@ services:
       - "3389:3389/tcp"
       - "3389:3389/udp"
     stop_grace_period: 2m
+
